--- a/JavaFXView/src/main/resources/com/example/javafxview/GameForm.fxml
+++ b/JavaFXView/src/main/resources/com/example/javafxview/GameForm.fxml
@@ -1,11 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
-
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.javafxview.GameForm">
     <children>
-        <TextArea fx:id="obszarSudoku" layoutX="200.0" layoutY="60.0" prefHeight="200.0" prefWidth="200.0" />
+        <GridPane>
+            <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" />
+                <ColumnConstraints hgrow="SOMETIMES" />
+                <ColumnConstraints hgrow="SOMETIMES" />
+                <ColumnConstraints hgrow="SOMETIMES" />
+                <ColumnConstraints hgrow="SOMETIMES" />
+                <ColumnConstraints hgrow="SOMETIMES" />
+                <ColumnConstraints hgrow="SOMETIMES" />
+                <ColumnConstraints hgrow="SOMETIMES" />
+                <ColumnConstraints hgrow="SOMETIMES" />
+            </columnConstraints>
+            <rowConstraints>
+                <RowConstraints  vgrow="SOMETIMES" />
+                <RowConstraints  vgrow="SOMETIMES" />
+                <RowConstraints  vgrow="SOMETIMES" />
+                <RowConstraints  vgrow="SOMETIMES" />
+                <RowConstraints  vgrow="SOMETIMES" />
+                <RowConstraints  vgrow="SOMETIMES" />
+                <RowConstraints  vgrow="SOMETIMES" />
+                <RowConstraints  vgrow="SOMETIMES" />
+                <RowConstraints  vgrow="SOMETIMES" />
+            </rowConstraints>
+        </GridPane>
     </children>
 </AnchorPane>
