--- a/JavaFXView/src/main/resources/com/example/javafxview/GameForm.fxml
+++ b/JavaFXView/src/main/resources/com/example/javafxview/GameForm.fxml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.javafxview.GameForm">
+<AnchorPane prefHeight="600.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.javafxview.GameForm">
     <children>
-        <GridPane>
+        
+        <GridPane fx:id="obszarSudoku" alignment="CENTER" layoutX="78.0" layoutY="69.0" prefHeight="413.0" prefWidth="475.0">
+
             <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" />
                 <ColumnConstraints hgrow="SOMETIMES" />
@@ -18,18 +21,25 @@
                 <ColumnConstraints hgrow="SOMETIMES" />
                 <ColumnConstraints hgrow="SOMETIMES" />
                 <ColumnConstraints hgrow="SOMETIMES" />
+
             </columnConstraints>
+
             <rowConstraints>
-                <RowConstraints  vgrow="SOMETIMES" />
-                <RowConstraints  vgrow="SOMETIMES" />
-                <RowConstraints  vgrow="SOMETIMES" />
-                <RowConstraints  vgrow="SOMETIMES" />
-                <RowConstraints  vgrow="SOMETIMES" />
-                <RowConstraints  vgrow="SOMETIMES" />
-                <RowConstraints  vgrow="SOMETIMES" />
-                <RowConstraints  vgrow="SOMETIMES" />
-                <RowConstraints  vgrow="SOMETIMES" />
+                <RowConstraints vgrow="SOMETIMES" />
+                <RowConstraints vgrow="SOMETIMES" />
+                <RowConstraints vgrow="SOMETIMES" />
+                <RowConstraints vgrow="SOMETIMES" />
+                <RowConstraints vgrow="SOMETIMES" />
+                <RowConstraints vgrow="SOMETIMES" />
+                <RowConstraints vgrow="SOMETIMES" />
+                <RowConstraints vgrow="SOMETIMES" />
+                <RowConstraints vgrow="SOMETIMES" />
+
             </rowConstraints>
+
         </GridPane>
+      <Button fx:id="bzapiszgre" layoutX="126.0" layoutY="14.0" mnemonicParsing="false" onAction="#zapiszGre" text="Zapisz grę" />
+      <Button fx:id="bsprawdz" layoutX="290.0" layoutY="14.0" mnemonicParsing="false" onAction="#sprawdzPlansze" text="Sprawdź planszę" />
+
     </children>
 </AnchorPane>
