--- a/JavaFXView/src/main/resources/com/example/javafxview/Menu.fxml
+++ b/JavaFXView/src/main/resources/com/example/javafxview/Menu.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 
 
+<?import javafx.scene.text.Text?>
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.javafxview.Menu">
    <children>
       <AnchorPane layoutX="200.0" layoutY="74.0" prefHeight="200.0" prefWidth="200.0">
@@ -11,8 +12,10 @@
             <Button fx:id="bpoziom1" layoutX="67.0" layoutY="14.0" mnemonicParsing="false" onAction="#setPoziom1" text="Poziom 1" />
             <Button fx:id="bpoziom2" layoutX="67.0" layoutY="53.0" mnemonicParsing="false" onAction="#setPoziom2" text="Poziom 2" />
             <Button fx:id="bpoziom3" layoutX="67.0" layoutY="88.0" mnemonicParsing="false" onAction="#setPoziom3" text="Poziom 3" />
-
          </children>
       </AnchorPane>
+      <Button fx:id="eng" layoutX="34.0" layoutY="338.0" mnemonicParsing="false" onAction="#setEnglish" text="EN" />
+      <Button fx:id="pl" layoutX="66.0" layoutY="338.0" mnemonicParsing="false" onAction="#setPolish" text="PL" />
+      <Text fx:id="langchoose" layoutX="30.0" layoutY="321.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Wybierz jezyk" />
    </children>
 </AnchorPane>
