--- a/JavaFXView/src/main/resources/com/example/javafxview/GameForm.fxml
+++ b/JavaFXView/src/main/resources/com/example/javafxview/GameForm.fxml
@@ -39,8 +39,9 @@
             </rowConstraints>
 
         </GridPane>
-      <Button fx:id="bzapiszgre" layoutX="126.0" layoutY="14.0" mnemonicParsing="false" onAction="#zapiszGre" text="Zapisz grę" />
-      <Button fx:id="bsprawdz" layoutX="220.0" layoutY="14.0" mnemonicParsing="false" onAction="#sprawdzPlansze" text="Sprawdź planszę" />
+      <Button fx:id="bzapiszgre" layoutX="16.0" layoutY="14.0" mnemonicParsing="false" onAction="#zapiszGre" text="Zapisz grę" />
+      <Button fx:id="bzapiszgredb" layoutX="106.0" layoutY="14.0" mnemonicParsing="false" onAction="#zapiszGreDB" text="Zapisz grę do bazy" />
+      <Button fx:id="bsprawdz" layoutX="240.0" layoutY="14.0" mnemonicParsing="false" onAction="#sprawdzPlansze" text="Sprawdź planszę" />
       <Text fx:id="twynik" layoutX="343.0" layoutY="31.0" strokeType="OUTSIDE" strokeWidth="0.0" />
 
     </children>
